# shepherds-console

./: .gitignore  AUDIT_v0.1.1.md  CHANGELOG.md  DOCS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/shepherds_console/: __init__.py  __main__.py  dashboard.py  web.py
tests/: test_console.py  test_stress.py
